<resources>
    <string name="app_name">simple_timer</string>
    <string name="title_activity_event_list">EventListActivity</string>

    <string name="edit">编辑</string>
    <string name="file">归档</string>
    <string name="delete">删除</string>
    <string name="OpenRecordString">时间记录</string>
    <string name="OpenEventListString">打开事件列表页面</string>
    <string name="BackString">返回</string>
    <string name="AddString">添加</string>
    <string name="TodayString">今天</string>
    <string name="SaveString">保存</string>
    <string name="PlaceHolderText">占位文本</string>
    <string name="StartTimeString">开始时间</string>
    <string name="EndTime">结束时间</string>
    <string name="Category">分类</string>
    <string name="Note">请输入备注</string>
    <string name="TimeRangeExample">00:00~00:18</string>
    <string name="ExampleCategory">业余探索</string>
    <string name="ExampleMinute">18分钟</string>
    <string name="time_range">%1$s~%2$s</string>
    <string name="month_format">%1$s月</string>
    <string name="date_format">%1$s日</string>
    <string name="minutes">%1$d分钟</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EditString">编辑</string>
    <string name="DeleteString">删除</string>
    <string name="CategoryManagementString">分类管理</string>
    <string name="backupdatastring">数据备份</string>
    <string name="restoredata">恢复数据</string>
    <string name="year">整年</string>
    <string name="month">整月</string>
    <string name="week">整周</string>
    <string name="day">整天</string>
    <string name="set_range_String">请设置起始日期\n或选择时间范围</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="addCategory">添加分类</string>
    <string name="example_date_21">21日</string>
    <string name="example_month_10">10月</string>
    <string name="menu">菜单</string>
    <string name="timer_description">时间管理助手</string>
    <string name="nav_home">首页</string>
    <string name="nav_categories">分类管理</string>
    <string name="nav_backup">数据备份</string>
    <string name="nav_restore">恢复数据</string>
    <string name="nav_settings">设置</string>
    <string name="status_active">活跃中</string>
    <string name="status_archived">已归档</string>

</resources>