<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/set_date_text"
            android:text="@string/set_range_String"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="#625b71"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"/>
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#6750a4"
            android:background="@android:color/transparent"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#6750a4"
            android:background="@android:color/transparent"
            android:text="@string/ok"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/year_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textColor="#6750a4"
            android:background="@android:color/transparent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/month_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textColor="#6750a4"
            android:background="@android:color/transparent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/week_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/week"
            android:textColor="#6750a4"
            android:background="@android:color/transparent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/day_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textColor="#6750a4"
            android:background="@android:color/transparent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/today_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/TodayString"
            android:textColor="#6750a4"
            android:background="@android:color/transparent"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>