<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/nav_home" />
    <!-- 分类管理功能待实现，暂时隐藏 -->
    <!--<item-->
    <!--    android:id="@+id/nav_categories"-->
    <!--    android:icon="@drawable/ic_launcher_foreground"-->
    <!--    android:title="@string/nav_categories" />-->
    <item
        android:id="@+id/nav_backup"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/nav_backup" />
    <item
        android:id="@+id/nav_restore"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/nav_restore" />
    <!-- 设置功能待实现，暂时隐藏 -->
    <!--<item-->
    <!--    android:id="@+id/nav_settings"-->
    <!--    android:icon="@drawable/ic_launcher_foreground"-->
    <!--    android:title="@string/nav_settings" />-->
</menu>