<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 主内容区域 -->
    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- 顶部标题栏 -->
        <RelativeLayout
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:padding="8dp">

            <Button
                android:id="@+id/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:textSize="18sp"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <!-- 显示日期范围 -->
        <com.wy.simple_timer.custom_views.DateRangeTextView
            android:id="@+id/dateRangeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#6750a4"
            android:layout_below="@+id/title_bar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/TodayString"/>

        <!-- 用于显示 EventListFragment 和 CategoryManagementFragment 的 LinearLayout -->
        <LinearLayout
            android:id="@+id/fragment_containers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateRangeTextView"
            android:layout_above="@+id/button_layout"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:divider="@drawable/shadow_divider"
            android:layout_marginBottom="0dp"
            android:showDividers="middle">

            <!-- 用于显示 EventListFragment 的 FrameLayout -->
            <FrameLayout
                android:id="@+id/fragment_container1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <!-- 用于显示 CategoryManagementFragment 的 FrameLayout -->
            <FrameLayout
                android:id="@+id/fragment_container2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>

        <!-- 下方的按钮布局 -->
        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/transparent"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/statusButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#6750a4"
                android:background="@color/transparent"
                android:padding="0dp"
                android:text="@string/status_active" />

            <Button
                android:id="@+id/addCategoryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#6750a4"
                android:background="@color/transparent"
                android:padding="0dp"
                android:text="@string/addCategory" />

            <Button
                android:id="@+id/openRecordActivityButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#6750a4"
                android:background="@color/transparent"
                android:padding="0dp"
                android:text="@string/OpenRecordString" />

        </LinearLayout>
    </RelativeLayout>

    <!-- 侧边栏菜单 -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>